--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="{{ "/assets/stylesheets/style.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="/css/contributors.css">
+  <link rel="stylesheet" href="/css/post_snippet.css">
 </head>
