--- a/css/contributors.scss
+++ b/css/contributors.scss
@@ -11,3 +11,9 @@
     margin: 10px;
     list-style-type: none;
 }
+
+.wrapper .contrib-wrapper {
+    padding: 0px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}   
