--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,9 +1,18 @@
 <banner>
-	<div class="jumbotron vertical-center">
-	<div class="container text-center wrapper">
-	  <h1>{{ site.title }}</h1>
-	  <p>{{ site.description }}</p>
-	  <p><a class="btn btn-primary btn-lg" href="#" role="button">Download</a></p>
+    <div class="banner-container">
+	<div class="jumbotron vertical-center banner-background">
+	<div class="container text-center wrapper banner-wrapper">
+	  <h1 class="banner-title">{{ site.data.frontpage.banner.title }}</h1>
+	  <p>{{ site.data.frontpage.banner.description }}</p>
+	  <p>
+         {% for button in site.data.frontpage.banner.buttons %}
+         <a class="btn btn-primary btn-lg" href="{{ button.link }}" role="button">
+            <i class="{{ button.icon }}"></i>
+            {{ button.title }}
+         </a>
+         {% endfor %}
+      </p>
 	</div>
 	</div>
+    </div>
 </banner>
