--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,10 +5,13 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="/css/contributors.css">
-  <link rel="stylesheet" href="/css/post_snippet.css">
+  <link rel="stylesheet" href="{{ "/css/contributors.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/post_snippet.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/affiliations.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/overrides.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/banner.css" | prepend: site.baseurl }}">
 </head>
