--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,6 +100,8 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+    padding-top: 0 !important;
+    margin: 0 !important;
 }
 
 .footer-heading {
@@ -111,6 +113,15 @@
 .social-media-list {
     list-style: none;
     margin-left: 0;
+}
+
+.social-media-item {
+    display: inline;
+}
+
+.social-media-button {
+    padding: 0;
+    font-size: 40px;
 }
 
 .footer-col-wrapper {
