--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -5,7 +5,7 @@
     {% for contributor in site.data.frontpage.contributors %}
         <li class="contrib-li col-xs-2 col-sm-2 col-md-1">
             <a title="@{{ contributor.login }}" href="{{ contributor.url }}">
-                <img class="contrib-image img-circle" src="{{ contributor.avatar_url }}" alt="@{{ contributor.login }}">
+                <img class="contrib-image img-circle" src="{{ contributor.url }}" alt="@{{ contributor.login }}">
             </a>       
         </li>
     {% endfor %}
