Try again: Fix links for avatar pic to github account

--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -4,8 +4,8 @@
     <ul>
     {% for contributor in site.data.frontpage.contributors %}
         <li class="contrib-li col-xs-2 col-sm-2 col-md-1">
-            <a title="@{{ contributor.login }}" href="{{ contributor.url }}">
-                <img class="contrib-image img-circle" src="{{ contributor.url }}" alt="@{{ contributor.login }}">
+            <a title="@{{ contributor.login }}" href="{{ contributor.html_url }}">
+                <img class="contrib-image img-circle" src="{{ contributor.avatar_url }}" alt="@{{ contributor.login }}">
             </a>       
         </li>
     {% endfor %}
