--- a/_includes/post_snippet.html
+++ b/_includes/post_snippet.html
@@ -1,10 +1,34 @@
-<latest-post-snippet>
-    <div class="row">
-        <div class="col-md-4">
+<post-snippet>
+    {% assign contributor = site.data.frontpage.contributors | where: "login", include.param.author | first %}
+    <div class="post-snippet row">
+        <div class="text-center col-md-2">
+            <a title="@{{ contributor.login }}" href="{{ contributor.html_url }}">
+            <img class="post-image img-circle" src="{{ contributor.avatar_url }}" alt="@{{ contributor.login }}">
+            <span class="text-center">@{{ contributor.login }}</span>
+            </a>
         </div>
+        <div class="col-md-10">
+            <h3>{{ include.param.title }}</h3>
+            <span class="post-meta">{{ include.param.date | date: "%b %-d, %Y" }}</span>
+            <p>{{ post.content | strip_html | truncatewords: 40}}</p>
+        </div>
+        
+
         <div class="col-md-8">
-            <h3>{{ include.post.title }}</h3>
-            <p>{{ include.post.content }}</p>
+            <ul class="post-tags-ul">
+            {% for category in post.categories %}
+            <li class="post-tag-li">
+            <span class="label label-success">
+                <i class="fa fa-tag"></i>
+                {{ category }}
+            </span>
+            </li>
+            {% endfor %}
+            </ul>
+        </div>
+        <div class="col-md-4">
+            <p class="post-snippet-button"><a class="btn btn-primary btn-lg" href="{{ post.url }}" role="button">More</a></p>
         </div>
     </div>
-</latest-post-snippet>
+    <hr>
+</post-snippet>
