--- a/css/post_snippet.scss
+++ b/css/post_snippet.scss
@@ -22,3 +22,19 @@
 .post-snippet-button {
     float: right;
 }
+
+.post-snippet-ul {
+    list-style-type: none;
+}
+
+.post-tags-ul {
+    list-style-type: none;
+    margin-bottom: 10px;
+}
+
+.post-tag-li {
+    margin-bottom: 5px;
+    margin-right: 5px;
+    display: inline;
+    float: left;
+}
