Polishing up blog post layout / Linking up remaining menu items

--- a/css/post_snippet.scss
+++ b/css/post_snippet.scss
@@ -38,3 +38,16 @@
     display: inline;
     float: left;
 }
+
+.post-name {
+    padding: 0;
+    margin-bottom: 0;
+}
+
+.post-social-media-link {
+    text-decoration: none !important;
+}
+
+.post-social-media-icons {
+    font-size:20px;
+}
