--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,30 @@
 layout: default
 ---
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+  
+  {% include post_header.html param=page %}
 
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time></p>
   </header>
-
+  
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+  </div>
+
+  {% include post_footer.html param=page %}
+
+  <div class="col-md-8">
+    {% include post_footer.html param=post %}
+  </div>
+  <div class="col-md-4">
+    <p class="post-snippet-button">
+        <a class="btn btn-primary btn-lg" href="{{ '/blog/' | prepend: site.baseurl }}" role="button">
+            <i class="fa fa-chevron-left"></i>        
+            Blog
+        </a>
+    </p>
   </div>
 
 </article>
