--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
   <link rel="stylesheet" href="{{ "/css/affiliations.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/overrides.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/banner.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/publications.css" | prepend: site.baseurl }}">
 </head>
