--- a/css/overrides.scss
+++ b/css/overrides.scss
@@ -31,3 +31,7 @@
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
     width: 100% !important;
 }
+
+.about {
+    margin-bottom: 20px;
+}
