Add newpost script and add support for math blocks using LaTex syntax

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,5 +17,6 @@
 
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/javascript/bootstrap.js"></script>
+  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
 </footer>
