Revert "Removing slogan section from banner"
This reverts commit dea1bbe9e812ccd8618007e4bb9295b06041e541.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,6 +3,7 @@
 	<div class="jumbotron vertical-center banner-background">
 	<div class="container text-center wrapper banner-wrapper">
 	  <h1 class="banner-title">{{ site.data.frontpage.banner.title }}</h1>
+	  <p>{{ site.data.frontpage.banner.description }}</p>
 	  <p>
          {% for button in site.data.frontpage.banner.buttons %}
          <a class="btn btn-primary btn-lg" href="{{ button.link }}" role="button">
