--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
   <link rel="stylesheet" href="{{ "/css/overrides.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/banner.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/publications.css" | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/MRtrix3/mrtrix3/master/icons/desktop/48x48/mrtrix.png">
 </head>
