--- a/_includes/publication_item.html
+++ b/_includes/publication_item.html
@@ -21,9 +21,9 @@
         {% endif %}
         
         <div class="media-body">
-            <a href="{{ include.param.url }}">
+            {%if include.param.url == blank %}<a href="{{ include.param.url }}">{% endif %}
             <h4 class="media-heading publication-header">{{ include.param.title }}</h4>
-            </a>
+            {%if include.param.url == blank %}</a>{% endif %}
 
         <p class="publication-content"> 
             {% if include.param.authors %}
