new post to announce updated_syntax merge

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -45,6 +45,11 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
+h1 {
+   margin-top: 0.5em;
+   margin-bottom: 0.5em;
+ }
+
 
 
 /**
