--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,4 +28,21 @@ layout: default
     </p>
   </div>
 
+
+  {% if page.discourse_id %}
+
+  <div id='discourse-comments'></div>
+
+  <script type="text/javascript">
+  DiscourseEmbed = { discourseUrl: 'http://community.mrtrix.org/',
+                     topicId: {{ page.discourse_id }} };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+  })();
+  </script>
+  {% endif %}
+
 </article>
