--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,15 +1,28 @@
 <post-header>
-    {% assign contributor = site.data.frontpage.contributors | where: "login", include.param.author | first %}
     {% assign author = site.data.authors | where: "github", include.param.author | first %}
+    {% assign contributor = site.data.frontpage.contributors | where: "login", include.param.author | first %}  
     <div class="text-center col-md-2">
         <img class="post-image img-circle" src="{{ contributor.avatar_url }}" alt="@{{ contributor.login }}">
         <p class="post-name post-meta">{{ author.nickname }}</p>
-        <!-- GitHub -->            
+
+        <!-- Discourse -->
+        {% if author.discourse %}
+        <a class="post-social-media-link" title="author.discourse" href="{{ author.discourse | prepend: 'http://community.mrtrix.org/users/' }}">
+        <span class="post-social-media-icons text-center">
+            <i class="fa fa-comment"></i>
+        </span>
+        </a>
+        {% endif %}
+
+        <!-- GitHub -->
+        {% if author.github %}       
         <a class="post-social-media-link" title="@{{ contributor.login }}" href="{{ contributor.html_url }}">
         <span class="post-social-media-icons text-center">
             <i class="fa fa-github"></i>
         </span>
         </a>
+        {% endif %}
+
         <!-- Twitter -->
         {% if author.twitter %}
         <a class="post-social-media-link" title="#{{ author.twitter }}" href="{{ author.twitter | prepend: 'https://twitter.com/' }}">
@@ -23,7 +36,7 @@
         {% if author.website %}
         <a class="post-social-media-link" title="{{ author.name }}'s website" href="{{ author.website }}">
         <span class="post-social-media-icons text-center">
-            <i class="fa fa-graduation-cap"></i>
+            <i class="fa fa-globe"></i>
         </span>
         </a>
         {% endif %}
