Adding post-micro-snippet to list the top 3 most posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   <link rel="stylesheet" href="{{ "/css/contributors.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/post_snippet.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/post_micro_snippet.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/affiliations.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/overrides.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/banner.css" | prepend: site.baseurl }}">
