--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1"></meta>
 
   <!-- Twitter cards -->
-  <meta name="twitter:site"    content="@{{ site.twitter_username }}">
+  <meta name="twitter:site"    content="@{{ site.title }}">
   <meta name="twitter:creator" content="@{{ page.author }}">
   <meta name="twitter:title"   content="{{ page.title }}">
 
