More tweaks for Twitter Cards

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,8 @@
 
   <!-- Twitter cards -->
   <meta name="twitter:site"    content="@{{ site.title }}">
-  <meta name="twitter:creator" content="@{{ page.author }}">
-  <meta name="twitter:title"   content="{{ page.title }}">
-
+  <meta name="twitter:creator" content="@{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
+  <meta name="twitter:title"   content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   {% if page.summary %}
   <meta name="twitter:description" content="{{ page.summary }}">
   {% else %}
