Try fixing image URL for Twitter cards...

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,18 +7,14 @@
   <meta name="twitter:site"    content="@{{ site.title }}">
   <meta name="twitter:creator" content="@{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %}">
   <meta name="twitter:title"   content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
-  {% if page.summary %}
-  <meta name="twitter:description" content="{{ page.summary }}">
-  {% else %}
-  <meta name="twitter:description" content="{{ site.description }}">
-  {% endif %}
+  <meta name="twitter:description" content="{% if page.summary %}{{ page.summary }}{% else %}{{ site.description }}{% endif %}">
 
   {% if page.image %}
   <meta name="twitter:card"  content="summary_large_image">
   <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
   {% else %}
   <meta name="twitter:card"  content="summary">
-  <meta name="twitter:image" content="{{ site.title_image }}">
+  <meta name="twitter:image" content="{{ site.url }}{{ site.title_image }}">
   {% endif %}
   <!-- end of Twitter cards -->
 
