--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -6,7 +6,7 @@
         {% assign img_link = contributor.avatar_url %}
     {% else %}
         {% assign author = site.data.authors | where: "discourse", include.param.author | first %}
-        {% assign img_link = include.param.author | prepend: 'http://community.mrtrix.org/user_avatar/community.mrtrix.org/' | append: '/120/9_1.png' %}
+        {% assign img_link = include.param.author | prepend: 'https://community.mrtrix.org/user_avatar/community.mrtrix.org/' | append: '/120/9_1.png' %}
     {% endif %}
 
     <div class="text-center col-md-2">
@@ -23,7 +23,7 @@
         {% endif %}
 
         <!-- GitHub -->
-        {% if author.github %}       
+        {% if author.github %}
         <a class="post-social-media-link" title="@{{ contributor.login }}" href="{{ contributor.html_url }}">
         <span class="post-social-media-icons text-center">
             <i class="fa fa-github"></i>
